# StreetCheck

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .gitleaks.toml  .oxlintrc.json  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CI_SETUP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  USER_MANUAL.md  biome.json  cliff.toml  docker-compose.yml  eslint.config.js  knip.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  deploy-github-pages.yml  deploy.yml
.specify/: init-options.json  integration.json
.specify/extensions/: .registry
.specify/extensions/agent-context/: README.md
.specify/integrations/: generic.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
ai-service/: Dockerfile  main.py  pyproject.toml  requirements.txt
ai-service/src/: __init__.py  schemas.py
ai-service/src/models/: __init__.py  cv_detector.py  nlp_classifier.py
client/: .env.development  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
client/public/: street_segments.geojson
client/src/: App.tsx  i18n.ts  index.css  main.tsx
client/src/locales/: en.json  hi.json  (+1 more)
prisma/: schema.prisma
server/: package.json  tsconfig.json  vitest.config.ts
server/src/: env.ts  index.ts  phase2.test.ts  phase6_3.test.ts
shared/: package.json  tsconfig.json  vitest.config.ts
shared/src/: index.ts
specs/streetcheck/: clarify.md  data-model.md  plan.md  spec.md  tasks.md
(+61 files in other folders)
