[project]
name = "streetcheck-ai-service"
version = "0.1.0"
description = "StreetCheck AI micro-service — NLP classification and CV hazard detection"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "anthropic>=0.36.0",
    "transformers>=4.48.0",
    "Pillow>=11.0.0",
    # CPU-only torch — override with GPU version for production
    "torch>=2.6.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
